# aetheris

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Aetheris-Development-Plan.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  release-appimage.yml  release-flatpak.yml  release-macos.yml  release-windows.yml  release.yml
build-aux/: compile-translations.sh  org.luminusos.Aetheris.json  update-po.sh
build-aux/inno/: aetheris.iss
crates/aetheris-app/: Cargo.toml  aetheris.rc  build.rs
crates/aetheris-app/src/: app.rs  main.rs
crates/aetheris-app/src/app/: ansi.rs  commands.rs  component.rs  dialogs.rs  handler.rs  i18n.rs  layout.rs  methods.rs  object_detail.rs  projects.rs  streams.rs  style.rs  utils.rs  widgets.rs  yaml.rs
crates/aetheris-app/src/app/component/: clusters.rs  detail_pane.rs  detail_signals.rs  namespaces.rs  object_table.rs  projects.rs  window_actions.rs
crates/aetheris-app/src/app/handler/: cluster.rs  exec.rs  logs.rs  mutations.rs  namespace.rs  nodes.rs  object_list.rs  port_forward.rs  project.rs
crates/aetheris-app/src/app/methods/: clusters.rs  detail.rs  namespaces.rs  navigation.rs  object_cache.rs  objects.rs  persistence.rs  sync.rs
crates/aetheris-app/src/app/object_detail/: events.rs  network.rs  pods.rs
crates/aetheris-app/src/app/projects/: column.rs  favorite.rs  project.rs  resource_section.rs  status_filter.rs  store.rs
crates/aetheris-app/src/app/streams/: exec.rs  logs.rs  object_watch.rs  port_forward.rs  yaml_explanation.rs
crates/aetheris-app/src/app/widgets/: classify.rs  cluster.rs  filters.rs  logs.rs  rows.rs  table.rs
crates/aetheris-app/src/app/yaml/: editor.rs  explain.rs
crates/aetheris-kube/: Cargo.toml
crates/aetheris-kube/src/: cluster.rs  events.rs  exec.rs  kubeconfig.rs  lib.rs  logs.rs  manager.rs  metrics.rs  mutations.rs  objects.rs  portforward.rs  resources.rs  session.rs  status.rs  types.rs
crates/aetheris-kube/src/objects/: ingress.rs  resources.rs  services.rs  summaries.rs
crates/aetheris-openconnect/: Cargo.toml  build.rs
crates/aetheris-openconnect/src/: error.rs  events.rs  ffi.rs  lib.rs  session.rs
data/: org.luminusos.Aetheris.desktop  org.luminusos.Aetheris.metainfo.xml  style.css
po/: POTFILES.in  org.luminusos.Aetheris.pot  pt_BR.po
po/pt_BR/LC_MESSAGES/: org.luminusos.Aetheris.mo
scripts/: bundle-macos-runtime.sh  make-macos-icns.sh
