[workspace]
resolver = "2"
members = [
    "crates/aetheris-app",
    "crates/aetheris-kube",
]

[workspace.package]
version = "1.4.1"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Leandro Rodrigues <leandromqrs@hotmail.com>"]

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
dirs = "6"
futures = "0.3"
http = "1"
k8s-openapi = { version = "0.28", features = ["latest"] }
kube = { version = "4", features = ["client", "config", "runtime", "ws", "derive"] }
relm4 = { version = "0.11", features = ["libadwaita", "gnome_50"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
strip = true
